@@ -1,3 +1,5 @@
+29.oct (ws)
+      - fix #13034: Tie direction for chords
 28.oct (ws)
       - more robust reading of corrupted file (#13357 corrupted key signature)
       - fix #13363: Recent change to repeat bar dot
